--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
   }
 
   dependencies {
-    classpath 'org.akhikhl.gretty:gretty:+'
+    classpath 'org.akhikhl.gretty:gretty:1.1.4-SNAPSHOT'
   }
 }
 
